; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_i_sound.c_I_ShutdownSound.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_i_sound.c_I_ShutdownSound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [47 x i8] c"I_ShutdownSound: NOT finishing pending sounds\0A\00", align 1
@channels = common dso_local global i32* null, align 8
@audio_fd = common dso_local global i32 0, align 4
@sndserver = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @I_ShutdownSound() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %3 = load i64, i64* @stderr, align 8
  %4 = call i32 @fprintf(i64 %3, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %5 = load i64, i64* @stderr, align 8
  %6 = call i32 @fflush(i64 %5)
  br label %7

7:                                                ; preds = %29, %0
  %8 = load i32, i32* %1, align 4
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  br i1 %10, label %11, label %30

11:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %12

12:                                               ; preds = %26, %11
  %13 = load i32, i32* %2, align 4
  %14 = icmp slt i32 %13, 8
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load i32*, i32** @channels, align 8
  %17 = load i32, i32* %2, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  br label %23

23:                                               ; preds = %15, %12
  %24 = phi i1 [ false, %12 ], [ %22, %15 ]
  br i1 %24, label %25, label %29

25:                                               ; preds = %23
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* %2, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %2, align 4
  br label %12

29:                                               ; preds = %23
  store i32 1, i32* %1, align 4
  br label %7

30:                                               ; preds = %7
  %31 = load i32, i32* @audio_fd, align 4
  %32 = call i32 @close(i32 %31)
  ret void
}

declare dso_local i32 @fprintf(i64, i8*) #1

declare dso_local i32 @fflush(i64) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
